--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -3,7 +3,7 @@ name: Redeploy Choreo
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 */30 * *'  # 每30天运行一次
+    - cron: '0 */5 * * *'  # 每5小时执行一次
 
 jobs:
   Redeploy:
